manifests/mh-api/agent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mh-agent
  namespace: mh-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mh-agent
  template:
    metadata:
      labels:
        app: mh-agent
    spec:
      imagePullSecrets:
      - name: gar-secret
      containers:
      - name: mh-agent
        image: asia-northeast1-docker.pkg.dev/mh-api-389212/mh-api/mh-agent:e93547c8395efd9496468ee0c1d8a015c1f35c4b
        ports:
        - containerPort: 8080
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
