manifests/mh-api/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mh-api
  namespace: mh-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: mh-api
  template:
    metadata:
      labels:
        app: mh-api
    spec:
      imagePullSecrets:
      - name: gar-secret
      containers:
      - name: mh-api
        image: asia-northeast1-docker.pkg.dev/mh-api-389212/mh-api/mh-api:35e3574a8d32f5d1aa1cf5d2b935dea4aec01c81
        ports:
        - containerPort: 8080
        - containerPort: 9090
          name: metrics
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
