manifests/mh-api/mcp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mh-mcp
  namespace: mh-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mh-mcp
  template:
    metadata:
      labels:
        app: mh-mcp
    spec:
      imagePullSecrets:
      - name: gar-secret
      containers:
      - name: mh-mcp
        image: asia-northeast1-docker.pkg.dev/mh-api-389212/mh-api/mh-mcp:b5a547f19d58ee6037d49ae0d4615cf78b0f0dc7
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
