manifests/mh-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mh-api
  namespace: mh-api
spec:
  ingressClassName: nginx
  rules:
  - host: mh-api.home.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mh-api
            port:
              number: 8080
  - host: api.mh-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mh-api
            port:
              number: 8080
  - host: mcp.mh-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mh-mcp
            port:
              number: 8080
  - host: agent.mh-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mh-agent
            port:
              number: 8080
